<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingRight="4dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"/>

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            android:backgroundTint="@color/colorWindowBackground" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5">

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_name"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_text_name"/>

        <TextView
            android:id="@+id/text_view_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_tel"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edit_text_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_text_tel"/>

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_viewemail"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_text_email"/>
    </LinearLayout>

</LinearLayout>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text="@string/button_delete"
            style="@style/DeleteButton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

</RelativeLayout>